JumpScript/tests/baselines/reference/invalidSyntaxNamespaceImportWithAMD.errors.txt
tests/cases/conformance/externalModules/1.jump(1,10): error TS1005: 'as' expected.
tests/cases/conformance/externalModules/1.jump(1,15): error TS1005: 'from' expected.
tests/cases/conformance/externalModules/1.jump(1,15): error TS1141: String literal expected.
tests/cases/conformance/externalModules/1.jump(1,20): error TS1005: ';' expected.
tests/cases/conformance/externalModules/1.jump(1,25): error TS1005: ';' expected.


==== tests/cases/conformance/externalModules/0.jump (0 errors) ====
    export class C { }
    
==== tests/cases/conformance/externalModules/1.jump (5 errors) ====
    import * from Zero from "./0"
             ~~~~
!!! error TS1005: 'as' expected.
                  ~~~~
!!! error TS1005: 'from' expected.
                  ~~~~
!!! error TS1141: String literal expected.
                       ~~~~
!!! error TS1005: ';' expected.
                            ~~~~~
!!! error TS1005: ';' expected.